Products.CMFCore Changelog
==========================

2.3.0-alpha (unreleased)
------------------------

- MemberDataTool: Fixed tool initialization.
  The default boolean and date property values were not set correctly.

- MemberDataTool: Modified 'setProperties' method.
  It now can be used by user managers as well.

- MembershipTool: Added 'isMemberAccessAllowed' method.
  If you don't have the 'Manage users' permission for the membership tool, you
  shouldn't have write access to other members.

- MemberDataTool: Removed obsolete MemberData factory lookup.
  This feature was added in CMF 2.2, but now the MemberAdapter should be
  overridden instead.

- MemberDataTool: Split up MemberData class.
  The old MemberData API is now provided by the new MemberAdapter. The
  persistent MemberData objects are just used for storing member data.

- interfaces: Added 'IMember' interface.

- permissions: Marked 'setDefaultRoles' as deprecated.

- Require at least Zope 2.13.4.

- DirectoryView: Added 'bobobase_modification_time' method to FSObject.
  The "Contents" tab in the ZMI now shows useful 'Last Modified' values.

- DirectoryView: Changed debug mode behavior.
  No additional subdirs are registered in debug mode. If you add new subdirs,
  you have to restart your instance.
  (https://bugs.launchpad.net/zope-cmf/+bug/271027)

- DirectoryView: Improved debug mode speed on NTFS partitions.
  The much faster non-Windows implementation is now used on Windows as well if
  non-FAT32 time stamps are detected. In rare cases that heuristic approach
  might fail to detected NTFS partitions.

- DirectoryView: Modernized debug mode lookup.
  Now getConfiguration().debug_mode is used instead of Globals.DevelopmentMode.

- Fix content exportimport when Title or Description are unicode (merge from
  2.2 branch).
  
- tests base: Tightened security for anonymous test user.

- Load permissions.zcml from Products.Five in the test to fix tests
  with Zope 2.12.
