@@ -4,6 +4,8 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- setup handlers: Added export/import support for member data tool settings.
+
 - MemberDataTool: Fixed tool initialization.
   The default boolean and date property values were not set correctly.
 
